--- a/product.html
+++ b/product.html
@@ -3,61 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>All Products — DjsDopeDesigns</title>
+  <title>Product Page — DjsDopeDesigns</title>
   <link rel="icon" type="image/png" href="https://images.squarespace-cdn.com/content/v1/5559fdd6e4b0e3eb2cfa9394/64fb3589-910a-41d7-8767-d1e72606ffdb/Cartoon+women.PNG?format=2500w">
   <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="style.css">
-  <style>
-    footer { height: 140px; }
-    .featured-container { max-width: 70%; }
-    .featured-image { max-width: 100%; height: auto; }
-    .featured-title { font-size: 2xl; }
-    .featured-price { font-size: lg; }
-    .featured-description { font-size: base; }
-  </style>
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="font-sans bg-gradient-to-r from-green-200 to-blue-200 min-h-screen">
+<body class="font-sans min-h-screen bg-gray-900 text-white">
 
 <!-- HEADER -->
-<header class="bg-white shadow sticky top-0 z-50">
+<header class="bg-gray-800 shadow sticky top-0 z-50">
   <div class="container mx-auto flex justify-between items-center px-4 py-4">
-    <a href="index.html" class="text-xl font-bold">DjsDopeDesigns</a>
-    <button @click="cartOpen = !cartOpen" class="relative text-gray-700 text-xl">
-      🛒 <span id="cart-count" class="absolute -top-2 -right-3 bg-orange-500 text-white rounded-full text-xs px-2">0</span>
+    <a href="index.html" class="text-xl font-bold text-white">DjsDopeDesigns</a>
+    <button @click="cartOpen = !cartOpen" class="relative text-white text-xl"> 🛒
+      <span id="cart-count" class="absolute -top-2 -right-3 bg-red-500 text-white rounded-full text-xs px-2">0</span>
     </button>
   </div>
 </header>
 
-<!-- SEARCH BAR -->
+<!-- SEARCH -->
 <div class="container mx-auto px-4 py-4 relative flex justify-center">
-  <input type="text" id="searchInput" placeholder="Search products..." class="w-full md:w-1/2 px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 mx-auto" oninput="filterProducts()">
-  <div id="searchPreview" class="absolute bg-white border border-gray-200 rounded shadow-md mt-1 w-full md:w-1/2 hidden z-50"></div>
+  <input type="text" id="searchInput" placeholder="Search products..." class="w-full md:w-1/2 px-4 py-2 rounded-lg border border-gray-700 focus:outline-none focus:ring-2 focus:ring-purple-500 mx-auto text-gray-900" oninput="filterProducts()">
+  <div id="searchPreview" class="absolute bg-gray-800 border border-gray-700 rounded shadow-md mt-1 w-full md:w-1/2 hidden z-50"></div>
 </div>
 
 <!-- FEATURED PRODUCT -->
 <div class="container mx-auto px-4 my-4 flex justify-center" id="featured-product"></div>
 
 <!-- OTHER PRODUCTS -->
-<div class="container mx-auto px-4 mt-8">
-  <div id="other-products" class="grid grid-cols-2 md:grid-cols-4 gap-6 justify-center"></div>
-</div>
+<div class="container mx-auto px-4 mt-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="other-products"></div>
 
-<!-- SLIDING CART -->
-<div :class="cartOpen ? 'translate-x-0 ease-out' : 'translate-x-full ease-in'" class="fixed right-0 top-0 max-w-xs w-full h-full px-6 py-4 transition transform bg-white border-l-2 border-gray-300 overflow-y-auto z-50">
+<!-- CART SLIDE-IN -->
+<div :class="cartOpen ? 'translate-x-0 ease-out' : 'translate-x-full ease-in'" class="fixed right-0 top-0 max-w-xs w-full h-full px-6 py-4 transition transform bg-gray-800 border-l-2 border-gray-700 overflow-y-auto z-50">
   <div class="flex justify-between items-center">
-    <h3 class="text-2xl font-medium text-gray-700">Your cart</h3>
-    <button @click="cartOpen = !cartOpen" class="text-gray-600 focus:outline-none"> ✕ </button>
+    <h3 class="text-2xl font-medium text-white">Your cart</h3>
+    <button @click="cartOpen = !cartOpen" class="text-gray-400 focus:outline-none"> ✕ </button>
   </div>
-  <hr class="my-3">
+  <hr class="my-3 border-gray-700">
   <div id="cart-items" class="space-y-6"></div>
-  <div class="mt-4 text-lg font-bold text-gray-700 text-right" id="cart-total">Total: $0.00</div>
+  <div class="mt-4 text-lg font-bold text-white text-right" id="cart-total">Total: $0.00</div>
   <div class="mt-2 flex justify-center">
-    <button id="checkout-btn" class="flex items-center px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-500">Checkout</button>
+    <button id="checkout-btn" class="flex items-center px-4 py-2 bg-purple-500 text-white rounded hover:bg-purple-600">Checkout</button>
   </div>
 </div>
-
-<footer class="md:hidden"></footer>
 
 <script>
 let products = [];
@@ -68,12 +55,10 @@ const featuredId = params.get('id') || null;
 async function loadProducts() {
   try {
     const res = await fetch('products.json'); 
-    products = await res.json(); 
+    products = await res.json();
     renderFeatured();
     renderOtherProducts(products.filter(p => p.id !== featuredId));
-  } catch(err) {
-    console.error("Failed to load products:", err);
-  }
+  } catch(err) { console.error("Failed to load products:", err); }
 }
 
 function renderFeatured() {
@@ -81,109 +66,100 @@ function renderFeatured() {
   const featured = products.find(p => p.id === featuredId);
   if(!featured) return;
   const container = document.getElementById("featured-product");
-  container.innerHTML = `
-    <div class="featured-container bg-white/80 rounded-lg shadow-md flex flex-col md:flex-row md:space-x-6 p-3 mx-auto">
-      <div class="md:w-1/2 w-full">
-        <img src="${featured.image}" alt="${featured.name}" class="featured-image w-full h-auto object-contain rounded-lg">
-      </div>
-      <div class="md:w-1/2 w-full mt-4 md:mt-0 flex flex-col justify-between relative">
-        <div>
-          <h1 class="featured-title font-bold text-gray-800 mb-2">${featured.name}</h1>
-          <p class="featured-price text-gray-500 mb-4">$${(featured.price/100).toFixed(2)}</p>
-          <p class="featured-description text-gray-700 mb-6">${featured.description}</p>
-        </div>
-        <div class="flex flex-col md:flex-row md:space-x-2 space-y-2 md:space-y-0 fixed bottom-0 left-0 right-0 md:static md:mt-4 bg-white md:bg-transparent p-3 md:p-0 shadow md:shadow-none">
-          <button onclick="buyNow('${featured.id}')" class="flex-1 bg-indigo-600 text-white px-4 py-3 rounded hover:bg-indigo-500 text-lg font-semibold">Order Now</button>
-          <button onclick="addToCart('${featured.id}')" class="flex-1 bg-gray-200 px-4 py-3 rounded hover:bg-gray-300 text-lg font-semibold">🛒 Add to Cart</button>
-        </div>
-      </div>
-    </div>
-  `;
+  container.innerHTML = createProductCard(featured);
 }
 
 function renderOtherProducts(filteredProducts) {
-  const otherContainer = document.getElementById("other-products");
-  otherContainer.innerHTML = '';
+  const container = document.getElementById("other-products");
+  container.innerHTML = '';
   filteredProducts.forEach(p => {
     const div = document.createElement('div');
-    div.className = "bg-white/80 p-4 rounded-lg shadow-md flex flex-col items-center justify-between";
-    div.innerHTML = `
-      <div class="w-full aspect-w-1 aspect-h-1 mb-2">
-        <img src="${p.image}" alt="${p.name}" class="w-full h-full object-contain rounded">
-      </div>
-      <div class="text-sm font-medium text-gray-700 mb-1">${p.name}</div>
-      <div class="text-sm text-gray-500 mb-2">$${(p.price/100).toFixed(2)}</div>
-      <div class="flex space-x-2">
-        <a href="?id=${p.id}" class="bg-indigo-600 text-white px-3 py-1 rounded text-sm hover:bg-indigo-500">View</a>
-        <button onclick="addToCart('${p.id}')" class="bg-gray-200 px-2 py-1 rounded hover:bg-gray-300">🛒</button>
-      </div>
-    `;
-    otherContainer.appendChild(div);
+    div.innerHTML = createProductCard(p);
+    container.appendChild(div);
   });
+}
+
+function createProductCard(p) {
+  return `
+<div class="max-w-md w-full bg-gray-900 shadow-lg rounded-xl p-6">
+  <div class="relative h-62 w-full mb-3">
+    <img src="${p.image}" alt="${p.name}" class="w-full h-52 object-cover rounded-2xl">
+  </div>
+  <div class="flex-auto justify-evenly">
+    <div class="flex flex-wrap mb-2">
+      <div class="flex-1 inline-flex items-center mb-2">
+        <h2 class="text-lg font-semibold text-white truncate">${p.name}</h2>
+        <div class="ml-3 flex items-center bg-green-400 text-white text-xs px-2 py-1 rounded-lg">INSTOCK</div>
+      </div>
+    </div>
+    <div class="text-xl font-semibold text-white mb-3">$${(p.price/100).toFixed(2)}</div>
+    <div class="flex space-x-2 text-sm font-medium justify-start">
+      <button onclick="addToCart('${p.id}')" class="transition ease-in duration-300 inline-flex items-center text-sm font-medium bg-purple-500 px-5 py-2 hover:shadow-lg tracking-wider text-white rounded-full hover:bg-purple-600">Add Cart</button>
+      <a href="?id=${p.id}" class="transition ease-in duration-300 bg-gray-700 hover:bg-gray-800 border hover:border-gray-500 border-gray-700 hover:text-white text-gray-400 rounded-full w-9 h-9 text-center p-2">
+        <svg xmlns="http://www.w3.org/2000/svg" class="" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
+        </svg>
+      </a>
+    </div>
+  </div>
+</div>`;
 }
 
 function filterProducts() {
   const query = document.getElementById("searchInput").value.toLowerCase();
   const preview = document.getElementById("searchPreview");
-  if (!query) { preview.classList.add("hidden"); return; }
+  if(!query) { preview.classList.add("hidden"); return; }
   const filtered = products.filter(p => p.name.toLowerCase().startsWith(query));
-  if(filtered.length === 0) {
-    preview.innerHTML = `<div class="p-2 text-gray-500">No results</div>`;
-  } else {
+  if(filtered.length === 0) { preview.innerHTML = `<div class="p-2 text-gray-400">No results</div>`; }
+  else {
     preview.innerHTML = filtered.map(p => `
-      <a href="?id=${p.id}" class="flex items-center space-x-3 p-2 hover:bg-gray-100 rounded" onclick="document.getElementById('searchPreview').classList.add('hidden')">
+      <a href="?id=${p.id}" class="flex items-center space-x-3 p-2 hover:bg-gray-700 rounded" onclick="document.getElementById('searchPreview').classList.add('hidden')">
         <img src="${p.image}" alt="${p.name}" class="w-10 h-10 object-contain rounded">
-        <span class="text-gray-700">${p.name}</span>
+        <span class="text-gray-200">${p.name}</span>
       </a>
-    `).join("");
+    `).join('');
   }
   preview.classList.remove("hidden");
 }
 
 document.addEventListener("click", (e) => {
-  if (!document.getElementById("searchInput").contains(e.target) && !document.getElementById("searchPreview").contains(e.target)) {
+  if(!document.getElementById("searchInput").contains(e.target) && !document.getElementById("searchPreview").contains(e.target)) {
     document.getElementById("searchPreview").classList.add("hidden");
   }
 });
 
 // CART FUNCTIONS
-function saveCart() { localStorage.setItem("cart", JSON.stringify(cart)); }
-function addToCart(id) {
-  const existing = cart.find(item => item.id === id);
-  if(existing) { existing.quantity++; } 
-  else { 
-    const product = products.find(p => p.id === id);
-    if(!product) return;
-    cart.push({ ...product, quantity: 1 });
-  }
+function saveCart(){ localStorage.setItem("cart", JSON.stringify(cart)); }
+function addToCart(id){
+  const existing = cart.find(item=>item.id===id);
+  if(existing){ existing.quantity++; }
+  else{ const product = products.find(p=>p.id===id); if(!product) return; cart.push({...product, quantity:1}); }
   saveCart(); renderCartItems(); updateCartCount();
 }
-function buyNow(id) { addToCart(id); const cartPanel = document.querySelector('[x-data]'); cartPanel.__x.$data.cartOpen = true; }
-function increaseQuantity(index) { cart[index].quantity++; saveCart(); renderCartItems(); updateCartCount(); }
-function decreaseQuantity(index) { if(cart[index].quantity > 1){ cart[index].quantity--; } else { cart.splice(index,1); } saveCart(); renderCartItems(); updateCartCount(); }
-function removeItem(index){ cart.splice(index,1); saveCart(); renderCartItems(); updateCartCount(); }
-function updateCartTotal() { const total = cart.reduce((acc, item) => acc + item.price * item.quantity, 0); document.getElementById("cart-total").textContent = `Total: $${(total/100).toFixed(2)}`; }
-function updateCartCount() { document.getElementById("cart-count").textContent = cart.reduce((acc,item)=>acc+item.quantity,0); }
-function renderCartItems() {
-  const container = document.getElementById("cart-items");
-  container.innerHTML = '';
-  if(cart.length === 0){ container.innerHTML = `<div class="text-gray-500">Your cart is empty.</div>`; updateCartTotal(); return; }
-  cart.forEach((item,index) => {
-    const div = document.createElement('div');
-    div.className = "flex justify-between items-center border-b pb-2";
-    div.innerHTML = `
+function increaseQuantity(i){ cart[i].quantity++; saveCart(); renderCartItems(); updateCartCount(); }
+function decreaseQuantity(i){ if(cart[i].quantity>1){ cart[i].quantity--; } else { cart.splice(i,1); } saveCart(); renderCartItems(); updateCartCount(); }
+function removeItem(i){ cart.splice(i,1); saveCart(); renderCartItems(); updateCartCount(); }
+function updateCartTotal(){ const total = cart.reduce((acc,item)=>acc+item.price*item.quantity,0); document.getElementById("cart-total").textContent=`Total: $${(total/100).toFixed(2)}`; }
+function updateCartCount(){ document.getElementById("cart-count").textContent=cart.reduce((acc,item)=>acc+item.quantity,0); }
+function renderCartItems(){
+  const container = document.getElementById("cart-items"); container.innerHTML='';
+  if(cart.length===0){ container.innerHTML=`<div class="text-gray-400">Your cart is empty.</div>`; updateCartTotal(); return; }
+  cart.forEach((item,i)=>{
+    const div=document.createElement('div'); div.className="flex justify-between items-center border-b pb-2";
+    div.innerHTML=`
       <div class="flex items-center space-x-3">
         <img src="${item.image}" alt="${item.name}" class="w-12 h-12 object-contain rounded">
         <div>
-          <div class="text-gray-700">${item.name}</div>
-          <div class="text-gray-500 text-sm">$${(item.price/100).toFixed(2)}</div>
+          <div class="text-white">${item.name}</div>
+          <div class="text-gray-400 text-sm">$${(item.price/100).toFixed(2)}</div>
         </div>
       </div>
       <div class="flex items-center space-x-2">
-        <button onclick="decreaseQuantity(${index})" class="px-2 py-1 bg-gray-200 rounded hover:bg-gray-300">-</button>
+        <button onclick="decreaseQuantity(${i})" class="px-2 py-1 bg-gray-700 rounded hover:bg-gray-600">-</button>
         <span>${item.quantity}</span>
-        <button onclick="increaseQuantity(${index})" class="px-2 py-1 bg-gray-200 rounded hover:bg-gray-300">+</button>
-        <button onclick="removeItem(${index})" class="px-2 py-1 text-red-500 hover:text-red-700">✕</button>
+        <button onclick="increaseQuantity(${i})" class="px-2 py-1 bg-gray-700 rounded hover:bg-gray-600">+</button>
+        <button onclick="removeItem(${i})" class="px-2 py-1 text-red-500 hover:text-red-700">✕</button>
       </div>
     `;
     container.appendChild(div);
@@ -191,12 +167,10 @@ function renderCartItems() {
   updateCartTotal();
 }
 
-document.getElementById("checkout-btn").addEventListener("click", () => { alert("Checkout clicked! Implement your payment gateway here."); });
+document.getElementById("checkout-btn").addEventListener("click",()=>{ alert("Checkout clicked! Implement your payment gateway here."); });
 
 // INITIALIZE
-renderCartItems(); 
-loadProducts(); 
-updateCartCount();
+renderCartItems(); loadProducts(); updateCartCount();
 </script>
 </body>
 </html>
